--- a/aghsat.html
+++ b/aghsat.html
@@ -1,10 +1,54 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="fa">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="site.webmanifest">
+  <meta name="theme-color" content="#fafafa">
+  <script src="js/main.js"></script>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+
+<body class="body_panel" onload="close_part()">
+
+<div class="menu">
+  <ul class="ul">
+    <li class="li"><h2>بیمه یار</h2></li>
+    <li class="li"><a href="panel.html">خانه</a></li>
+    <li class="li"><a href="bimeـname.html">بیمه نامه</a></li>
+    <li class="li"><a href="aghsat.html" class="active">اقساط</a></li>
+  </ul>
+</div>
+
+<div class="right_part">
+
+  <div class="sub_menu" onload="close_part()">
+    <div id="navbar">
+      <a onclick="open_part('add')">افزودن</a>
+      <a onclick="open_part('show')">مشاهده</a>
+      <a href="php/exit.php" target="_blank" style="float:right">خروج</a>
+    </div>
+  </div>
+
+  <div class="content">
+    <main>
+      <div id="add" class="tabcontent">
+        <h3>add</h3>
+        <p>Paris is the capital of France.</p>
+      </div>
+
+      <div id="show" class="tabcontent">
+        <h3>show</h3>
+        <p>Tokyo is the capital of Japan.</p>
+      </div>
+    </main>
+  </div>
+
+</div>
 
 </body>
+
 </html>
