--- a/panel.html
+++ b/panel.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="fa">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>پنل مدیریت</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="site.webmanifest">
@@ -12,37 +12,28 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="body_panel" onload="close_part()">
+<body class="body_panel">
 
 <div class="menu">
-  <ul class="ul_0">
-    <li class="li_1"><h2>بیمه یار</h2></li>
-    <li class="li_0"><a href="">بیمه نامه</a></li>
-    <li class="li_0"><a href="">اقساط</a></li>
+  <ul class="ul">
+    <li class="li"><h2>بیمه یار</h2></li>
+    <li class="li"><a href="panel.html" class="active">خانه</a></li>
+    <li class="li"><a href="bimeـname.html">بیمه نامه</a></li>
+    <li class="li"><a href="aghsat.html">اقساط</a></li>
   </ul>
 </div>
 
 <div class="right_part">
 
-  <div class="sub_menu" onload="close_part()">
+  <div class="sub_menu">
     <div id="navbar">
-      <a onclick="open_part('add')">افزودن</a>
-      <a onclick="open_part('show')">مشاهده</a>
-      <a href="rules.html" target="_blank" style="float:right">خروج</a>
+      <a href="php/exit.php"  style="float:right">خروج</a>
     </div>
   </div>
 
   <div class="content">
     <main>
-      <div id="add" class="tabcontent">
-        <h3>add</h3>
-        <p>Paris is the capital of France.</p>
-      </div>
 
-      <div id="show" class="tabcontent">
-        <h3>show</h3>
-        <p>Tokyo is the capital of Japan.</p>
-      </div>
     </main>
   </div>
 
