--- a/aghsat.html
+++ b/aghsat.html
@@ -35,15 +35,137 @@
 
   <div class="content">
     <main>
-      <div id="add" class="tabcontent">
-        <h3>add</h3>
-        <p>Paris is the capital of France.</p>
-      </div>
+      <main>
+        <div id="add">
 
-      <div id="show" class="tabcontent">
-        <h3>show</h3>
-        <p>Tokyo is the capital of Japan.</p>
-      </div>
+
+          <div class="form">
+            <form action="php/add_aghsat.php">
+
+              <label for="price">مبلغ کل :</label>
+              <input type="text" class="input" id="price" name="ins_nmber">
+
+              <label for="issue_date">تاریخ صدور :</label>
+              <input type="text" class="input" id="issue_date" name="issue_date">
+
+              <label for="percent">میزان سود به درصد :</label>
+              <input type="text" class="input" id="percent" name="percent">
+
+              <label for="telephone">تلفن :</label>
+              <input type="text" class="input" id="telephone" name="telephone">
+
+              <label for="time">مدت بیمه نامه به روز  :</label>
+              <input type="text" class="input" id="time" name="time">
+
+              <label for="name">نام :</label>
+              <input type="text" class="input" id="name" name="name">
+
+              <input class="input_button" type="submit" value="ثبت">
+            </form>
+          </div>
+        </div>
+
+        <div id="show" class="show_div">
+          <label for="filter_input">متن مورد نظر را جست و جو کنید</label>
+          <input type="text" class="input" id="filter_input" onkeyup="filter_table()">
+
+          <label for="td_num">شماره ستون</label>
+          <input type="text" class="input" id="td_num">
+
+          <table class="panel_table" id="panel_table">
+            <tr class="header">
+
+              <th>وضعیت</th>
+              <th>مبلغ کل</th>
+              <th>تاریخ صدور</th>
+              <th>میزان سود به درصد</th>
+              <th>تلفن</th>
+              <th>مدت بیمه نامه</th>
+              <th>نام</th>
+              <th>شماره</th>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>نزدیک سر رسید</td>
+              <td>نام</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+            </tr>
+            <tr>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+              <td>Germany</td>
+              <td>Alfreds Futterkiste</td>
+            </tr>
+          </table>
+
+        </div>
+      </main>
     </main>
   </div>
 
