--- a/aghsat.html
+++ b/aghsat.html
@@ -75,14 +75,14 @@
           <table class="panel_table" id="panel_table">
             <tr class="header">
 
-              <th>وضعیت</th>
-              <th>مبلغ کل</th>
-              <th>تاریخ صدور</th>
-              <th>میزان سود به درصد</th>
-              <th>تلفن</th>
-              <th>مدت بیمه نامه</th>
-              <th>نام</th>
-              <th>شماره</th>
+              <th>وضعیت 0</th>
+              <th>مبلغ کل 1</th>
+              <th>تاریخ صدور 2</th>
+              <th>میزان سود به درصد 3</th>
+              <th>تلفن 4</th>
+              <th>مدت بیمه نامه 5</th>
+              <th>نام 6</th>
+              <th>شماره 7</th>
             </tr>
             <tr>
               <td>Alfreds Futterkiste</td>
