--- a/panel.html
+++ b/panel.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <script type="text/javascript" src="js/loader.js"></script>
   <script src="js/main.js"></script>
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -33,12 +34,56 @@
 
   <div class="content">
     <main>
+      <div class="row">
+        <div class="column" style="background-color:blue;">
+          <h2> بیمه نامه ها</h2>
+          <h2 class="panel_text">134</h2>
+        </div>
+        <div class="column" style="background-color:red;">
+          <h2>اقساط</h2>
+          <h2 class="panel_text">1234</h2>
+        </div>
+        <div class="column" style="background-color:green;">
+          <h2>اقساط نزدیک سر رسید</h2>
+          <h2 class="panel_text">123</h2>
+        </div>
+        <div class="column" style="background-color:orange;">
+          <h2>مبلغ قابل دریافت</h2>
+          <h2 class="panel_text">123 تومان</h2>
+        </div>
+      </div>
 
+      <div class="row chart">
+        <div id="piechart"></div>
+      </div>
     </main>
   </div>
 
 </div>
+<script type="text/javascript">
+  // Load google charts
+  google.charts.load('current', {'packages':['corechart']});
+  google.charts.setOnLoadCallback(drawChart);
 
+  // Draw the chart and set the chart values
+  function drawChart() {
+    var data = google.visualization.arrayToDataTable([
+      ['Task', 'Hours per Day'],
+      ['Work', 8],
+      ['Eat', 2],
+      ['TV', 4],
+      ['Gym', 2],
+      ['Sleep', 8]
+    ]);
+
+    // Optional; add a title and set the width and height of the chart
+    var options = {'title':'My Average Day', 'width':550, 'height':400};
+
+    // Display the chart inside the <div> element with id="piechart"
+    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+    chart.draw(data, options);
+  }
+</script>
 </body>
 
 </html>
