--- a/aghsat.html
+++ b/aghsat.html
@@ -43,7 +43,7 @@
             <form action="php/add_aghsat.php">
 
               <label for="price">مبلغ کل :</label>
-              <input type="text" class="input" id="price" name="ins_nmber">
+              <input type="text" class="input" id="price" name="price">
 
               <label for="issue_date">تاریخ صدور :</label>
               <input type="text" class="input" id="issue_date" name="issue_date">
